--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,42 +1,32 @@
-@import './counter.scss';
+@import './theme.scss';
+@import 'bootstrap/dist/css/bootstrap.min.css';
 
-.App {
-    text-align: center;
+@font-face {
+  font-family: 'tealfont';
+  src: url('../assets/fonts/Quicksand-Medium.ttf');
+  border-radius: 10px;
+}
+
+
+html, body, .App {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  height: 100vh;
+  color: $primary;
+  font-size: 1.8rem;
+  font-weight: 400;
+  font-family: 'tealfont' !important;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  height: 65px;
+  font-size: .6rem;
+  text-decoration: none !important;
+  a {
+    text-decoration: none !important;
+    color: $secondary !important;
   }
-  
-  .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-float infinite 3s ease-in-out;
-    }
-  }
-  
-  .App-header {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-  }
-  
-  .App-link {
-    color: rgb(112, 76, 182);
-  }
-  
-  @keyframes App-logo-float {
-    0% {
-      transform: translateY(0);
-    }
-    50% {
-      transform: translateY(10px)
-    }
-    100% {
-      transform: translateY(0px)
-    }
-  }
-  
+}
