--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -24,7 +24,7 @@ html, body, .App {
 
 .footer {
   position: relative;
-  bottom: 0;
+  bottom: 0px;
   height: 65px;
   font-size: 1rem;
   text-decoration: none !important;
