--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -35,11 +35,11 @@ html, body, .App {
 }
 
 .day {
-  color: $secondary;
+  color: #fff;
   font-size: 1.8rem;
 }
 
 .month-year {
-  color: $secondary;
+  color: #fff;
   font-size: 1.2rem;
 }
