--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,11 +5,18 @@
   src: url('../assets/fonts/Quicksand-Medium.ttf');
 }
 
+html {
+  position: relative;
+  min-height: 100%;
+}
 
-html, body, .App {
+body {
+  margin-bottom: 100px;
+}
+
+.App {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   color: $secondary;
   font-size: 1.2rem;
   font-weight: 200;
@@ -23,9 +30,13 @@ html, body, .App {
 }
 
 .footer {
-  position: relative;
-  bottom: 0px;
-  height: 65px;
+  position: absolute;
+  bottom: 0;
+  height: 100px; //same height as the margin to the bottom of the body
+  justify-content: center;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
   font-size: 1rem;
   text-decoration: none !important;
   a {
